<resources>
    <string name="app_name">app-accounting</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_passwordconf">Confirmar Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="btn_register">REGISTRARSE EN APP_ACCOUNTING</string>
    <string name="btn_login">INICIAR SESION</string>
    <string name="text_index">App Accounting</string>
    <string name="text_login">Inicia sesion con email</string>
    <string name="text_login2">Inicia sesion usando Social</string>
    <string name="email_login">E-mail</string>
    <string name="pass_login">Contraseña</string>
    <string name="name_login">Nombre</string>
    <string name="login_facebook">Iniciar con Facebook</string>
    <string name="login_google">Iniciar con Google</string>
    <string name="btn_registro">REGISTRARSE</string>

    <string name="exit">Cerrar Sesion</string>
    <string name="settings">Ajustes</string>
    <string name="profile">Perfil</string>
    <string name="movements">Movimientos</string>
    <string name="action_search">Buscar</string>

    <string name="text_register">Registro usando Social</string>
    <string name="text_register2">Registrarse con email</string>
    <string name="btn_register2">REGISTRARSE</string>
    <string name="register_facebook">Registro usando Facebook</string>
    <string name="register_google">Registro con Google</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saldo">Saldo Actual:</string>
    <string name="ingresos">Ingresos: </string>
    <string name="gastos">Gastos: </string>
    <string name="presupuesto">Presupuesto: </string>
    <string name="transactions">Transacciones </string>
    <string name="balance">Balance: $00</string>
    <string name="budget">Presupuesto</string>
    <string name="Feeding">Alimentación</string>
    <string name="Education">Educación</string>
    <string name="Entertainment">Entretenimiento</string>
    <string name="Bills">Facturas</string>
    <string name="Home">Casa</string>
    <string name="Clothes">Ropa </string>
    <string name="Health">Salud</string>
    <string name="Transport">Transporte</string>
    <string name="Everybody">Todo </string>
    <string name="Others">Otros</string>

    <string name="Goal">Meta: </string>
    <string name="spending_value">Valor Gasto: </string>
    <string name="Details">Ver detalle </string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ok_register">Registro Exitoso</string>
    <string name="erro_register">Registro No Exitoso</string>
    <string name="field_required">Este campo es requerido</string>
    <string name="field_incorrect">Email o contraseña incorrecta</string>
    <string name="confirmarConstraseña">Confirmar contraseña</string>
    <string name="name">Nombre</string>
    <string name="invalid_mail">El correo no es válido</string>
    <string name="pass_no_equals">Las contraseñas no coinciden</string>
    <string name="user_exists">El usuario ya existe</string>
    <string name="category">Categoría </string>
    <string name="amount">Monto </string>
    <string name="fecha">Fecha </string>
    <string name="description">Descripción </string>
    <string name="regIngre">Registrar Ingreso </string>
    <string name="regPresup">Registrar Presupuesto </string>
    <string name="inicio">Inicio</string>
    <string name="reportes">Reportes</string>
    <string name="presupuest">Presupuesto</string>
    <string name="fechaini">FechaInicio</string>
    <string name="fechafin">FechaFin</string>


    <string-array name="categories_debits_array">
        <item>Ropa</item>
        <item>Combustible</item>
        <item>Transporte</item>
        <item>Facturas</item>
        <item>Obligacion bancaria</item>
        <item>Arriendo</item>
        <item>Mercado</item>
        <item>Entretenimiento</item>
        <item>Regalos</item>
        <item>Fiesta</item>
        <item>Comida afuera</item>
        <item>Deporte</item>
        <item>Alojamiento</item>
        <item>Otros</item>
    </string-array>

    <string-array name="categories_entries_array">
        <item>Salario</item>
        <item>Arrendamiento</item>
        <item>Otros</item>
    </string-array>


</resources>
