<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_index"
            android:icon="@drawable/vista_genera"
            android:tint="@color/colorWhite"
            android:title="@string/inicio"/>

        <item
            android:id="@+id/action_movements"
            android:icon="@drawable/transactions"
            android:tint="@color/colorWhite"
            android:title="@string/transactions"/>

        <item
            android:id="@+id/action_presupuesto"
            android:icon="@drawable/presupuesto"
            android:tint="@color/colorWhite"
            android:title="@string/presupuest"/>

        <item
            android:id="@+id/action_reportes"
            android:icon="@drawable/reportes"
            android:tint="@color/colorWhite"
            android:title="@string/reportes"/>

        <item
            android:id="@+id/action_info"
            android:icon="@drawable/ic_profile"
            android:tint="@color/colorWhite"
            android:title="@string/profile" />

        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_settings"
            android:tint="@color/colorWhite"
            android:title="@string/settings" />

        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/ic_exit"
            android:tint="@color/colorWhite"
            android:title="@string/exit" />


    </group>
</menu>