<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".PresupuestoActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollRegisterPresup" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/layoutRegisterPresup">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="bottom"
                android:id="@+id/headerPre"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/presupuesto2"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:id="@+id/textViewPre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/regPresup"
                    android:textColor="#000000"
                    android:gravity="center_horizontal"
                    android:textSize="30dp"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/valorPresupuesto"
                    android:hint="@string/amount"
                    android:inputType="number"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDescripPresupuesto"
                    android:inputType="text"
                    android:hint="Descripción"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDateInicioPresupuesto"
                    android:inputType="text"
                    android:hint="@string/fechaini"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:onClick="setDate"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDateFinPresupuesto"
                    android:inputType="text"
                    android:hint="@string/fechafin"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/category_pre_spinner"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:textColorHint="@color/colorGreyOsc"
                app:met_floatingLabel="normal" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regPresup"
                android:id="@+id/btnEnviarPresupuesto"
                android:onClick="savePresupuesto"
                android:textColor="#fcfafa"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="#5280d5"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>